# OpenManX-RobotControl

./: README.md
DynamixelSDK/dynamixel_sdk_custom_interfaces/srv/: GetCurrent.srv
DynamixelSDK/dynamixel_sdk_examples/include/: current_read_write_node.hpp
DynamixelSDK/dynamixel_sdk_examples/src/: current_read_write_node.cpp
final_project/: CMakeLists.txt  package.xml
final_project/src/: dh_parameters.cpp  forward_kinematics.cpp  open_manipulator_x.cpp  position_control.cpp  robot.cpp  service_inverse_kinematics.cpp  services_velocity_kinematics.cpp  subscriber_forward_kinematics.cpp  velocity_control.cpp
final_project_msgs/: CMakeLists.txt  package.xml
final_project_msgs/srv/: GetEndEffectorVelocities.srv  GetJointValues.srv  GetJointVelocities.srv
